Nginx/daemonSet.yaml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemonset
  namespace: nginx    
spec:
  selector:
    matchLabels:
      app: nginx-daemon-pod
  template:
    metadata:
      labels:
        app: nginx-daemon-pod
    spec: 
      containers:
      - name: nginx-cont
        image: nginx:latest
        ports:
        - containerPort: 80
