Nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 8000   # Outside Port where we want to access service
    targetPort: 80  # insider port of Pod
  type: ClusterIP
